test/files/neg/case-collision-multifile.check
two.scala:1: warning: Generated class hotDog differs only in case from HotDog (defined in one.scala).
  Such classes will overwrite one another on case-insensitive filesystems.
class hotDog
      ^
1 warning
error: No warnings can be incurred under -Werror.
